# Air-Visualizer

./: .gitignore  README.md  mise.toml  requirements.txt
backend/: main.py  migrate_add_sentiment.py  pyproject.toml  requirements.txt  test_sentiment.py  verify_db.py  verify_transcript.py  verify_websocket_sentiment.py
backend/app/: main.py  schemas.py
backend/app/core/: config.py
backend/app/models/: session.py  transcript.py
backend/app/services/analysis/: README.md  audio.py  sentiment.py
backend/app/services/coaching/: llm.py
backend/app/websockets/: manager.py  router.py
docs/: BACKEND_STRUCTURE.md  ENVIRONMENT_SETUP.md  EXTENSION_STRUCTURE.md  TEAM_DEVELOPMENT_GUIDE.md  TEAM_TASKS.md
extension/: .gitignore  package.json  pnpm-lock.yaml  popup.tsx
extension/components/: StatusIndicator.tsx
extension/contents/: meet-observer.tsx
extension/hooks/: useTranscriptObserver.ts  useWebSocket.ts
misc/: pre-commit
