[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.22.0",
    "audioread>=3.1.0",
    "fastapi>=0.124.4",
    "greenlet>=3.3.0",
    "librosa>=0.11.0",
    "numpy<2.0.0",
    "pydub>=0.25.1",
    "sentencepiece>=0.2.1",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.45",
    "tokenizers>=0.22.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
